mailhog/good/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: test-istio
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: "mailhog-ingress.pcd-2019.aios.sh"
    http:
      paths:
      - path: /
        backend:
          serviceName: mailhog
          servicePort: 8025
  tls:
    - secretName: mailhog-ingress-pcd-2019
      hosts: ["mailhog-ingress.pcd-2019.aios.sh"]
